# snake-engine

./: README.md
src/: Apple.cpp  Apple.hpp  CMakeLists.txt  Cell.cpp  Cell.hpp  Field.cpp  Field.hpp  SimpleRect.cpp  SimpleRect.h  Snake.cpp  Snake.hpp  SnakeEngine.cpp  SnakeEngine.hpp  main.cpp
src/genetic-cnn/: GenCNN.hpp  Matrix.hpp  NeuralNetwork.cpp  NeuralNetwork.h  NeuralNetwork.hpp
